@@ -202,10 +202,10 @@ class jtag2: public jtag
 
     virtual uchar *jtagRead(unsigned long addr, unsigned int numBytes);
     virtual bool jtagWrite(unsigned long addr, unsigned int numBytes, uchar buffer[]);
-    virtual const unsigned int statusAreaAddress(void) {
+    virtual unsigned int statusAreaAddress(void) const {
         return (is_xmega? 0x3D: 0x5D) + DATA_SPACE_ADDR_OFFSET;
     };
-    virtual const unsigned int cpuRegisterAreaAddress(void) {
+    virtual unsigned int cpuRegisterAreaAddress(void) const {
         return is_xmega? REGISTER_SPACE_ADDR_OFFSET: DATA_SPACE_ADDR_OFFSET;
     }
 
